tests/baselines/reference/functionCall15.errors.txt
tests/cases/compiler/functionCall15.ts(1,39): error TS2300: Duplicate identifier 'b'.


==== tests/cases/compiler/functionCall15.ts (1 errors) ====
    function foo(a?:string, b?:number, ...b:number[]){}
                                          ~
!!! error TS2300: Duplicate identifier 'b'.